# imagegen-bridge

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  compose.handoff.yaml  compose.package.yaml  compose.yaml  config.example.toml  docs-requirements.in  mkdocs.yml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  resilience.yml
crates/artifacts/: Cargo.toml
crates/artifacts/src/: chroma.rs  input.rs  inspect.rs  lib.rs  metadata.rs  remote.rs  store.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  commands.rs  dashboard.rs  doctor.rs  gateway.rs  lib.rs  main.rs  output.rs  presentation.rs  setup.rs
crates/cli/src/update/: archive.rs  cache.rs  github.rs  install.rs  mod.rs
crates/cli/tests/: cli.rs
crates/codex-app-server/: Cargo.toml
crates/codex-app-server/src/: lib.rs  process.rs  provider.rs  rpc.rs
crates/codex-responses/: Cargo.toml
crates/codex-responses/src/: auth.rs  events.rs  lib.rs  provider.rs  sse.rs
crates/codex-responses/tests/fixtures/: advanced-request.json  success.sse
crates/config/: Cargo.toml
crates/config/src/: build.rs  lib.rs  loader.rs  model.rs  validation.rs
crates/core/: Cargo.toml
crates/core/src/: capabilities.rs  error.rs  job.rs  lib.rs  negotiation.rs  parameters.rs  preset.rs  provider.rs  request.rs  response.rs  schema.rs  validation.rs
crates/imagegen-bridge/: Cargo.toml
crates/imagegen-bridge/src/: application.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: admission.rs  circuit_breaker.rs  idempotency.rs  lib.rs  materialize.rs  orchestrator.rs  registry.rs  sqlite_jobs.rs  sqlite_presets.rs  sqlite_sessions.rs  transparency.rs
crates/runtime/src/fanout/: mod.rs  tests.rs
crates/server/: Cargo.toml
crates/server/dashboard/: advanced-request.fixture.json  api.js  app.css  app.js  form.js  form.test.js  index.html
crates/server/src/: auth.rs  compat.rs  dashboard.rs  diagnostics.rs  error.rs  events.rs  jobs.rs  lib.rs  metrics.rs  openapi.rs  readiness.rs  routes.rs  serve.rs  streaming.rs
deploy/: imagegen-bridge.container.toml
docs/: api-explorer.md  api.md  capacity.md  cli.md  configuration.md  deployment.md  docker-quickstart.md  errors.md  faq.md  getting-started.md  index.md  limits.md  llms.txt  operations.md  releasing.md  resilience.md  sdks.md  testing.md
docs/javascripts/: page-actions.js
docs/overrides/partials/: actions.html  progress.html  search.html
docs/releases/: 0.2.0.md  0.3.0.md
docs/stylesheets/: extra.css  swagger-readonly.css
fixtures/sdk/: capabilities-response.json  edit-request.json  error-response.json  generate-request.json  image-response.json  image-stream.sse  providers-response.json  session-response.json
integrations/generate-images-with-bridge/: SKILL.md
schemas/: imagegen-bridge-v1.openapi.json  imagegen-bridge-v1.schema.json
sdks/python/: README.md  build-constraints.txt  pyproject.toml
sdks/python/src/imagegen_bridge/: __init__.py  _client.py  _errors.py  _sse.py  _types.py
sdks/python/tests/: conftest.py  test_client.py  test_supply_chain.py
sdks/typescript/: README.md  biome.json  package.json  tsconfig.build.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  sse.ts  types.ts
sdks/typescript/tests/: client.test.ts  node-smoke.mjs
skills/generate-images-with-bridge/: SKILL.md
tests/: container-smoke.sh
tools/: release-notes.test.ts  release-notes.ts  resilience-harness.ts
tools/schema-gen/: Cargo.toml
tools/schema-gen/src/: main.rs
tools/sdk-mock-server/: Cargo.toml
tools/sdk-mock-server/src/: main.rs
