[workspace]
members = [
  "crates/artifacts",
  "crates/codex-app-server",
  "crates/codex-responses",
  "crates/cli",
  "crates/config",
  "crates/core",
  "crates/imagegen-bridge",
  "crates/runtime",
  "crates/server",
  "tools/schema-gen",
  "tools/sdk-mock-server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Imagegen Bridge contributors"]
license = "MIT"
repository = "https://github.com/Crimsab/imagegen-bridge"
homepage = "https://github.com/Crimsab/imagegen-bridge"
readme = "README.md"
keywords = ["image-generation", "codex", "openai", "bridge"]
categories = ["api-bindings", "command-line-utilities", "multimedia::images"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
derivable_impls = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
