[package]
name = "imagegen-bridge-artifacts"
description = "Bounded image input loading and atomic artifact storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
cap-std = "4.0.2"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
imagegen-bridge-core = { path = "../core", version = "0.1.0" }
imagesize = { version = "0.15.0", default-features = false, features = ["jpeg", "png", "webp"] }
sha2 = "0.10"
tempfile = "3.27.0"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

