[package]
name = "imagegen-bridge-artifacts"
description = "Bounded image input loading and atomic artifact storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base16ct = { version = "1", features = ["alloc"] }
base64 = "0.22"
cap-std = "4.0.2"
futures-util = "0.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
imagegen-bridge-core = { path = "../core", version = "0.2.0" }
imagesize = { version = "0.15.0", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3.27.0"
tokio = { version = "1", features = ["net"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[lints]
workspace = true

[lib]
path = "src/lib.rs"
