[package]
name = "imagegen-bridge-cli"
description = "Complete command-line interface for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.33"
imagegen-bridge = { path = "../imagegen-bridge", version = "0.1.0", features = ["codex-responses"] }
imagegen-bridge-server = { path = "../server", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.27.0"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "imagegen-bridge"
path = "src/main.rs"
doc = false
