[package]
name = "imagegen-bridge-cli"
description = "Complete command-line interface for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base16ct = { version = "1", features = ["alloc"] }
base64 = "0.22"
clap = { version = "4.5.60", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.66"
clap_mangen = "0.3.0"
flate2 = "1.1.9"
imagegen-bridge = { path = "../imagegen-bridge", version = "0.1.4", features = ["codex-responses"] }
imagegen-bridge-server = { path = "../server", version = "0.1.4" }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
semver = "1.0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tar = { version = "0.4.46", default-features = false }
tempfile = "3.27.0"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "imagegen-bridge"
path = "src/main.rs"
doc = false
