[package]
name = "imagegen-bridge-codex-app-server"
description = "Codex app-server provider for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = { version = "0.3", features = ["sink"] }
imagegen-bridge-artifacts = { path = "../artifacts", version = "0.1.2" }
imagegen-bridge-core = { path = "../core", version = "0.1.2" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[lib]
path = "src/lib.rs"
