[package]
name = "imagegen-bridge-core"
description = "Provider-neutral domain contract for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
futures-core = "0.3"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
