[package]
name = "imagegen-bridge"
description = "Rust SDK facade for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
imagegen-bridge-artifacts = { path = "../artifacts", version = "0.1.0" }
imagegen-bridge-config = { path = "../config", version = "0.1.0" }
imagegen-bridge-core = { path = "../core", version = "0.1.0" }
imagegen-bridge-codex-responses = { path = "../codex-responses", version = "0.1.0", optional = true }
imagegen-bridge-runtime = { path = "../runtime", version = "0.1.0" }

[features]
default = []
codex-responses = ["dep:imagegen-bridge-codex-responses"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"
