[package]
name = "imagegen-bridge-runtime"
description = "Provider orchestration and durable state for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
imagegen-bridge-codex-app-server = { path = "../codex-app-server", version = "0.1.0" }
imagegen-bridge-core = { path = "../core", version = "0.1.0" }
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[lib]
path = "src/lib.rs"

