[package]
name = "imagegen-bridge-runtime"
description = "Provider orchestration and durable state for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
imagegen-bridge-artifacts = { path = "../artifacts", version = "0.1.0" }
imagegen-bridge-codex-app-server = { path = "../codex-app-server", version = "0.1.0" }
imagegen-bridge-core = { path = "../core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time"] }
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true

[lib]
path = "src/lib.rs"
