[package]
name = "imagegen-bridge-runtime"
description = "Provider orchestration and durable state for Imagegen Bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base16ct = { version = "1", features = ["alloc"] }
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
imagegen-bridge-artifacts = { path = "../artifacts", version = "0.2.0" }
imagegen-bridge-codex-app-server = { path = "../codex-app-server", version = "0.2.0" }
imagegen-bridge-core = { path = "../core", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["sync", "time"] }
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true

[lib]
path = "src/lib.rs"
