[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "imagegen-bridge"
version = "0.3.0"
description = "Typed sync and async Python SDK for Imagegen Bridge"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Imagegen Bridge contributors" }]
dependencies = ["httpx>=0.27,<1"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
keywords = ["image-generation", "codex", "openai", "sdk"]

[project.urls]
Homepage = "https://github.com/Crimsab/imagegen-bridge"
Repository = "https://github.com/Crimsab/imagegen-bridge"
Issues = "https://github.com/Crimsab/imagegen-bridge/issues"
Documentation = "https://github.com/Crimsab/imagegen-bridge/blob/main/docs/sdks.md"

[project.optional-dependencies]
test = [
  "build>=1.2,<2",
  "mypy>=1.15,<3",
  "pytest>=8.3,<10",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/imagegen_bridge"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["imagegen_bridge"]
mypy_path = "src"

[tool.uv]
package = true
